@@ -6,6 +6,7 @@ bp100_stage-deconstruct-tool=Staged deconstruction
 bp100_force-delete-tool=Force delete (in project)
 bp100_staged-copy-tool=Copy with stage info
 bp100_staged-cut-tool=Cut with stage info
+bp100_exclude-from-blueprints-tool=Blueprint exclusion tool
 bp100_stage-reference=Stage reference
 bp100_stage-reference-data=Stage reference-data
 
@@ -335,6 +336,7 @@ reset-vehicle-location=Reset vehicle location
 set-location-here=Set location here
 delete-entity=Force delete entity
 
+excluded-from-blueprints=Excluded from blueprints
 stage-diff=Updated settings
 reset-prop=Remove this change (sets to previous value)
 apply-to-lower-stage=Apply to previous stage (__1__)
